# VRCI

./: Cargo.toml  README.md
contracts/dex/: Cargo.toml
contracts/dex/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/portfolio/: Cargo.toml
contracts/portfolio/src/: lib.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs  tests.rs  unstaking_request.rs
contracts/token/: Cargo.toml  data.rs  errors.rs  events.rs  lib.rs  testing.rs  traits.rs
docs/: automation_cronjob_plan.md  deployment_guide.md  oracle-contract-docs.md  oracle_contract_roadmap.md  portfolio_contract_explanation.md  registry-contract-docs.md  registry_contract_doc.md  registry_contract_spec.md  registry_testing_guide.md  shared_library_docs.md  w3pi_feature_analysis.md  w3pi_token_guide.md
