# w3pi/Cargo.toml

# This is the root Cargo.toml file for the project.
# It is used to manage the dependencies and build the project.
# It is also used to manage the workspace.
# The workspace is a collection of contracts that are related to each other.
# The contracts are located in the contracts/ directory.
# The shared directory is a dependency that is used by the contracts.

[workspace]
members = [
    "contracts/oracle",
    "contracts/registry",
    "contracts/token",
    # Note: shared is a dependency, not a contract member
]
authors = ["3dln <ashcan@3dln.com>"]
# Set resolver to version 2 for edition 2021
resolver = "2"

[profile.release]
codegen-units = 1
panic = "abort"   # Important for production contracts
lto = true
opt-level = "z"   # Optimize for size

[profile.dev]
panic = "unwind" # Default for easier debugging during development

[workspace.dependencies]
ink = { version = "5.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
shared = { path = "contracts/shared", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
